@@ -17,6 +17,7 @@ to be part of history, be bookmarked, etc…
 - "handler" with now automatically add "%s" at the end of the command if not present
 - removed the "cat" command as it has no purpose (you can use "!cat" instead) and there was a potential crash (reported by Stephen)
 - "url" can be piped to any shell command: "url|" or "url 121|" (suggestion of Stephen)
+- "opnk" is now reading the offpunrc file to use predefined handlers
 
 ## 2.5 - January 30th 2025
 - "abbrevs" has been replaced by "alias"
